[project]
name = "knightsteel-the-foundry"
version = "0.1.0"
description = "Motor de Voz Divina para el Despertar de Denisse"
authors = [
    {name = "KnightSteel"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
